--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="container">
-    <form class="form-signin" method="post" action="/auth/login">
+    <form class="form-signin" method="post" action="/api/v1/auth/login">
         <h2 class="form-signin-heading">Please sign in</h2>
         <p>
             <label for="username" class="sr-only">Username</label>
